# ai-evaluator-extension

./: .PLAN.md  .gitignore  CLAUDE.md  INTEGRATION_PLAN.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  block.json  bun.lockb  fly.toml  package-lock.json  package.json  prometheus.yml  proxy.ts
front/: README.md  biome.json  (+3 more)
server/: .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
server/docs/: CONTRIBUTING.md  MULTI_AXIS_EVALUATION.md
server/docs/architecture/: ARCHITECTURE_REVIEW.md  CODE_REVIEW.md
server/docs/integrations/: LINKEDIN_PLUGIN.md
server/docs/plugins/: README.md  linkedin_plugin.md  pdf_resume_parser.md
server/src/: __init__.py
server/src/api/: __init__.py  auth.py  exception_handlers.py  main.py  models.py
server/src/api/llm/: __init__.py  proxy.py
server/src/config/: settings.py
server/src/core/: __init__.py  exceptions.py
server/src/core/external_mcp/: __init__.py  external_mcp_client.py  external_mcp_process.py
server/src/core/llm/: anthropic_provider.py  factory.py  openai_provider.py
server/src/core/plugin_system/: __init__.py  plugin_manager.py
server/src/core/protocol/: __init__.py  mcp_constants.py  mcp_protocol.py  sse_parser.py
server/src/core/routing/: __init__.py  agentic_framework.py  semantic_router.py
server/src/plugins/: __init__.py  calculator_plugin.py  echo_plugin.py  linkedin_external_plugin.py
server/src/plugins/pdf_resume_plugin/: __init__.py  extractor.py  llm_fallback.py  models.py  parser.py  plugin.py
server/src/utils/: __init__.py  logging.py  session_manager.py  timing.py
(+104 files in other folders)
